# PufferLib

./: .gitignore  LICENSE  README.md  build_ocean.sh  c_gae.c  c_gae.pyx  checkpoint_dict.txt  checkpoint_file_aggregator.py  checkpoint_stats.txt  clean_pufferl.py  cleanrl_minimal.py  cleanrl_ppo_atari.py  cleanrl_ppo_dmc.py  cleanrl_ppo_lstm.py  cleanrl_ppo_squared.py  cleanrl_ppo_squared_lstm.py  config.py  config.yaml  config_jsuarez.yaml  cv_test.py  delete_image_test_files.sh  demo.py  demo_atari.py  demo_nmmo.py  evaluate_elos.py  flattery.c  highway_build.sh  jank_sweep.sh  log_file_aggregator.py  make_overlay.py  mem_test.py  moba_perf.py  model_000200.pt  model_000610.pt  nmmo_demo.py  pokemon_red_eval.py  pyproject.toml  rllib_ppo.py  rllib_ppo_lstm.py  run.sh  (+24 more)
config/: atari.ini  box2d.ini  bsuite.ini  butterfly.ini  classic_control.ini  classic_control_continuous.ini  crafter.ini  default.ini  dm_control.ini  dm_lab.ini  doom.ini  gpudrive.ini  griddly.ini  gvgai.ini  magent.ini  microrts.ini  minerl.ini  minigrid.ini  minihack.ini  mujoco.ini  nethack.ini  nmmo.ini  nmmo3.ini  open_spiel.ini  pokemon_red.ini  procgen.ini  slimevolley.ini  stable_retro.ini  starcraft.ini
config/atari/: beam_rider.ini  breakout.ini  default.ini  enduro.ini  pong.ini  qbert.ini  seaquest.ini  space_invaders.ini
config/ocean/: bandit_cy.ini  breakout.ini  connect4.ini  continuous.ini  continuous_cy.ini  go.ini  grid.ini  highway.ini  memory_cy.ini  moba.ini  multiagent_cy.ini  my_pong.ini  ocean.ini  password_cy.ini  pong.ini  rocket_lander.ini  snake.ini  spaces_cy.ini  squared_cy.ini  stochastic_cy.ini  tactical.ini  tripletriad.ini
examples/: README.md  demo_emulation.py  large_ppo_atari.py  large_puffer_ppo_atari.py  ppo_atari.py  ppo_atari_envpool.py  ppo_minihack.py  puffer_ppo_atari.py  puffer_ppo_minihack.py  puffer_vec_ppo_minihack.py
experiments/r88v75bk/: model_011400.pt
pokemon_red_50m/: elo.db  model_000000.pt  model_000200.pt  model_000400.pt  model_000600.pt  model_000800.pt  model_001000.pt  model_001200.pt  model_001400.pt  model_001525.pt  trainer_state.pt
pufferlib/: __init__.py  args.py  binding.py  cleanrl.py  emulation.py  environment.py  evaluation.py  exceptions.py  extensions.c  extensions.html  extensions.pyx  frameworks.py  models.py  multi_env.py  namespace.py  new_emulation.py  policy_god.py  policy_library.py  policy_library_db.py  policy_pool.py  policy_ranker.py  policy_store.py  policy_tracker.py  postprocess.py  puffernet.c  puffernet.h  puffernet.html  puffernet.pyx  pytorch.py  rating.py  rllib.py  shared_memory.py  spaces.py  torch.py  utils.py  vecenvs.py  vector.py  vectorization.py  wrappers.py
pufferlib/bindings/: __init__.py  base.py  nethack.py  registry.py
pufferlib/environments/: Charmander.state  Squirtle.state  __init__.py  choice.state  pokemon_red.py  pokemon_red_clean.py  pokemon_red_minimal.py  pokemon_red_updated.py  squared.py
pufferlib/environments/ocean/csnake/: CMakeLists.txt  claude_snake.h  claude_snake_mlp.c  claude_snake_torch.cpp  jit_model.py  snake.c  snake.h
pufferlib/frameworks/: base.py  cleanrl.py  rllib.py
pufferlib/registry/: __init__.py  atari.py  butterfly.py  classic_control.py  crafter.py  dmc.py  (+12 more)
raylib_wasm/: LICENSE  README.md
resources/: connect4.pt
scripts/: run_baselines.sh  run_bsuite.py  run_ocean.sh  run_procgen_small.sh
src/: __init__.py  args.py  spaces.py
tests/: env_defs.py  environments.py  mock_environments.py  rank_testing.py  test.py  test_api.py  test_atari_reset.py  test_bindings.py  test_carbs.py  test_cleanrl.py  test_cleanrl_atari.py  test_cleanrl_atari_scale.py  test_cleanrl_utils.py  test_docs_nmmo.py  test_doublebuffer.py  test_emulation.py  test_env_performance.py  test_environments.py  test_envs.py  test_error_handling  test_error_handling.py  test_example.py  test_extensions.py  test_flatten.py  test_gym_seed.py  test_import_performance.py  test_namespace.py  test_nethack.py  test_new_emulation.py  test_nmmo.py  test_nmmo3_compile.py  test_openskillrating.py  test_performance.py  test_pokemon_red_step.py  test_policy_library.py  test_policy_pool.py  test_policy_ranker.py  test_policy_store.py  test_pytorch.py  test_registry.py  (+12 more)
(+303 files in other folders)
