[build-system]
requires = ["setuptools==65.5.0", "wheel", "Cython==3.0.0"]
# TODO: Figure out how to compile with -O3

[project]
name = "pufferlib"
version = "0.5.0"
description = "PufferAIs library of RL tools and utilities"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joseph Suarez", email = "jsuarez@puffer.ai"}
]
keywords = ["PufferAI", "AI", "Reinforcement Learning", "RL"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
urls = {homepage = "https://pufferai.github.io"}
requires-python = ">=3.8"
dependencies = [
    "numpy==1.23.3",
    "opencv-python==3.4.17.63",
    "openskill==4.0.0",
    "gymnasium==0.29.1"
]

[project.optional-dependencies]
docs = [
    "sphinx==5.0.0",
    "sphinx-rtd-theme==0.5.1",
    "sphinxcontrib-youtube==1.0.1",
    "sphinx-rtd-theme==0.5.1",
    "sphinx-design==0.4.1",
    "furo==2023.3.27"
]
cleanrl = [
    "tensorboard==2.11.2",
    "torch",
    "wandb==0.13.7",
    "psutil==5.9.5"
]
ray = [
    "ray[all]==2.0.0",
    "setproctitle==1.1.10",
    "service-identity==21.1.0",
    "pydantic==1.9"
]
atari = [
    "gymnasium[atari,accept-rom-license]",
    "stable_baselines3==2.1.0"
]
box2d = [
    "gymnasium[box2d]",
    "swig==4.1.1"
]
butterfly = [
    "pettingzoo==1.24.1",
    "pettingzoo[butterfly]"
]
crafter = [
    "crafter==1.8.0"
]
dm_control = [
    "dm_control==1.0.11",
    "dm_env==1.6"
]
dm_lab = [
    "gym_deepmind_lab==0.1.2",
    "dm_env==1.6"
]
griddly = [
    "griddly==1.4.2"
]
microrts = [
    "gym_microrts==0.3.2",
    "ffmpeg==1.4"
]
minihack = [
    "minihack==0.1.5"
]
nethack = [
    "nle==0.9.0"
]
nmmo = [
    "pettingzoo==1.24.1",
    "nmmo"
]
pokemon_red = [
    "pokegym"
]
procgen = [
    "procgen==0.10.7"
]

compatible_environments = [
    "pufferlib[atari]",
    "pufferlib[box2d]",
    "pufferlib[butterfly]",
    "pufferlib[classic_control]",
    "pufferlib[crafter]",
    "pufferlib[dm_control]",
    "pufferlib[dm_lab]",
    "pufferlib[griddly]",
    "pufferlib[microrts]",
    "pufferlib[minihack]",
    "pufferlib[nethack]",
    "pufferlib[nmmo]",
    "pufferlib[pokemon_red]",
    "pufferlib[procgen]"
]

# Environments that require incompatible dependencies
avalon = [
    "avalon-rl==1.0.0"
]
magent = [
    "magent==0.2.4",
    "pettingzoo==1.19.0"
]
minerl = [
    "gym==0.17.0",
    "minerl==0.4.4",
    "requests==2.31.0"
]
open_spiel = [
    "shimmy[gym-v21]",
    "pettingzoo==1.19.0",
    "open_spiel==1.3"
]
smac = [
    "pettingzoo==1.24.1",
    "smac@git+https://github.com/oxwhirl/smac"
]
stable-retro = [
    "stable-retro@git+https://github.com/Farama-Foundation/stable-retro"
]
